--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,26 +1,52 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
     <ion-menu contentId="main-content" type="overlay">
-      <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi&#64;ionicframework.com</ion-note>
+      <ion-content class="ion-padding">
+        <ion-row class="ion-text-center">
+          <ion-col size="12">
+            <img src="./assets/logo.png" alt="Logo" class="br-100 logo" />
+          </ion-col>
+        </ion-row>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+        <ion-row class="ion-text-center">
+          <ion-col size="12" class="avatar">
+            <div class="text-avatar">
+              <b>BEM-VINDO</b>
+            </div>
+          </ion-col>
+        </ion-row>
+
+        <ion-list id="inbox-list">
+          <!-- <ion-menu-toggle
+            auto-hide="false"
+            *ngFor="let p of appPages; let i = index"
+          >
+            <ion-item
+              routerDirection="root"
+              [routerLink]="[p.url]"
+              lines="none"
+              detail="false"
+              routerLinkActive="selected"
+            >
+              <ion-icon
+                aria-hidden="true"
+                slot="start"
+                [ios]="p.icon + '-outline'"
+                [md]="p.icon + '-sharp'"
+              ></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
+          </ion-menu-toggle> -->
+          <ion-menu-toggle auto-hide="false">
+            <ion-item button routerLinkActive="selected" (click)="logoff()">
+              <ion-icon
+                aria-hidden="true"
+                slot="start"
+                name="log-out"
+              ></ion-icon>
+              <ion-label>Sair</ion-label>
+            </ion-item>
           </ion-menu-toggle>
-        </ion-list>
-
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
-
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon aria-hidden="true" slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
-          </ion-item>
         </ion-list>
       </ion-content>
     </ion-menu>
