--- a/frontend/src/theme/styles.scss
+++ b/frontend/src/theme/styles.scss
@@ -11,6 +11,10 @@
   --border-radius: 20px;
 }
 
+.br-100 {
+  border-radius: 100%;
+}
+
 .p10 {
   padding: 10px;
 }
@@ -34,4 +38,24 @@ ion-textarea {
 
 .text-bold {
   font-weight: bold;
+}
+
+ion-toolbar {
+  --background: var(--ion-color-primary);
+}
+
+ion-title {
+  --color: var(--ion-color-white);
+}
+
+ion-menu {
+  --width: 270px !important;
+  --min-width: 270px !important;
+  --max-width: 270px !important;
+  border-right: 1px solid var(--ion-color-light !important);
+}
+
+.split-pane-md.split-pane-visible > .split-pane-side {
+  --max-width: 270px !important;
+  max-width: 270px !important;
 }
