--- a/frontend/src/app/pages/sign-up/sign-up.page.html
+++ b/frontend/src/app/pages/sign-up/sign-up.page.html
@@ -93,7 +93,7 @@
                   >
                     <ion-icon slot="icon-only" name="chevron-back"></ion-icon>
                   </ion-button>
-                  <ion-label>CANDIDATO</ion-label>
+                  <ion-label>EMPRESA</ion-label>
                 </ion-col>
                 <ion-col size="12" class="p10">
                   <ion-input
