--- a/frontend/src/theme/styles.scss
+++ b/frontend/src/theme/styles.scss
@@ -32,8 +32,25 @@ ion-textarea {
   --highlight-color-valid: none !important;
 }
 
+.input-light {
+  --background: var(--ion-color-light);
+  background-color: var(--ion-color-light);
+  border-radius: 1rem;
+  --border-radius: 1rem;
+  --padding-bottom: 5px !important;
+  --padding-top: 5px !important;
+  --padding-start: 10px !important;
+  --padding-end: 10px !important;
+  --highlight-color-focused: none !important;
+  --highlight-color-valid: none !important;
+}
+
 .m0 {
   margin: 0 !important;
+}
+
+.ml-10 {
+  margin-left: 10px !important;
 }
 
 .text-bold {
@@ -58,4 +75,12 @@ ion-menu {
 .split-pane-md.split-pane-visible > .split-pane-side {
   --max-width: 270px !important;
   max-width: 270px !important;
+}
+
+.input-label {
+  font-weight: bold;
+}
+
+.text-danger {
+  color: var(--ion-color-danger) !important;
 }
