--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -23,10 +23,9 @@
           >
             <ion-item
               button
-              routerLinkActive="selected"
+              routerLinkActive="text-primary"
               routerDirection="root"
               [routerLink]="[p.path]"
-              routerLinkActive="selected"
             >
               <ion-icon
                 aria-hidden="true"
