--- a/frontend/src/theme/styles.scss
+++ b/frontend/src/theme/styles.scss
@@ -66,6 +66,10 @@ ion-textarea {
   font-weight: bold;
 }
 
+.text-primary {
+  color: var(--ion-color-primary);
+}
+
 ion-toolbar {
   --background: var(--ion-color-primary);
 }
